--- a/html/css/style.css
+++ b/html/css/style.css
@@ -30,3 +30,29 @@ div.dataTables_filter {
 .far {
 font-family: "Font Awesome 5 Free" !important;
 }
+
+#ssQueryAndButton {
+    margin: 1em auto;
+    max-width: 50%;
+    width: 50%;
+}
+
+#ssQuery {
+    font-size: .9rem;
+    border-radius: 30px;
+    padding: .3rem 1.75rem .3rem .75rem;
+    border: 1px solid rgba(0,0,0,.075);
+    background-color: rgba(255,255,255,.1);
+    color: rgba(0,0,0,.9);
+}
+
+#ssDoSearch {
+    border: 0;
+    padding: 0;
+    background: 0 0;
+    cursor: pointer;
+    color: rgba(0,0,0,.6);
+    position: absolute;
+    left: 8.75rem;
+    top: .25rem;
+}
