removing sub-headers for editions; adding other nodes for xstl transformation in p el #5

--- a/html/css/style.css
+++ b/html/css/style.css
@@ -35,6 +35,10 @@ div.dataTables_filter {
     box-shadow: 4px 4px 9px 0 rgba(0, 0, 0, .1);
 }
 
+p {
+    display: block;
+}
+
 .container-fluid {
     max-width: 1024px;
 }
