minor style changes; removing card from search partner logos #8; adding titles to navbar items #9

--- a/html/css/style.css
+++ b/html/css/style.css
@@ -62,6 +62,10 @@ div.dataTables_filter {
     border: 1px solid white;
 }
 
+.btn-round:hover {
+    background-color: #b59890 !important;
+}
+
 .btn-round a {
     color: white;
 }
