adding letter specific info to toc.html cards #13; minor design changes #8

--- a/html/css/style.css
+++ b/html/css/style.css
@@ -45,6 +45,7 @@ div.dataTables_filter {
 
 .navbar .navbar-collapse .navbar-search {
     border-color: #b59890;
+    border-radius: .25rem;
 }
 
 .navbar .navbar-collapse .navbar-search:hover {
