--- a/html/css/style.css
+++ b/html/css/style.css
@@ -232,6 +232,42 @@ fieldset.ssFieldset > span > input {
     margin-left: .3em;
 }
 
+/* Hide scrollbar for Chrome, Safari and Opera */
+#ac-complete::-webkit-scrollbar {
+  display: none !important;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+#ac-complete {
+    display:block;
+    min-height:50px;
+    max-height:200px;
+    overflow:scroll;
+    margin: -.3em auto !important;
+    max-width: 50% !important;
+    width: 50% !important;
+    font-size: .9rem !important;
+    border-radius: 0 0 0 .25rem !important;
+    padding: 0.3rem !important;    
+    color: rgba(0,0,0,.9) !important;
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+}
+
+.ac-border {
+    border: 1px solid rgba(38, 35, 37, 0.075) !important;
+}
+
+.stem {
+    padding: .3em;
+    cursor: pointer;
+}
+
+.stem:hover {
+    background-color: rgba(38.0, 35.3, 37.6, 0.3);
+    border-radius: .25rem;
+}
+
 #github-logo {
     width: 10%;
     height: auto;
