--- a/html/css/style.css
+++ b/html/css/style.css
@@ -189,8 +189,9 @@ button#ssDoSearch {
     cursor: pointer !important;
     color: rgba(38, 35, 37, 0.6) !important;
     margin-left: -4.1em !important;
-    margin-right: 1em;
+    margin-right: -.25em;
     margin-top: .1em !important;
+    z-index:99;
 }
 
 form button svg {
@@ -241,19 +242,18 @@ fieldset.ssFieldset > span > input {
 /* Hide scrollbar for IE, Edge and Firefox */
 #ac-complete {
     display:block;
-    position:relative;
+    position:absolute;
     min-height:50px;
     max-height:200px;
     overflow:scroll;
-    margin: -.3em auto !important;
-    max-width: 50% !important;
-    width: 50% !important;
-    font-size: .9rem !important;
-    border-radius: 0 0 .25rem .25rem !important;
-    padding: 0.3rem !important;    
-    color: rgba(0,0,0,.9) !important;
+    margin: 4.5em 24%;
+    max-width: 50%;
+    width: 50% ;
+    font-size: .9rem;
+    border-radius: 0 0 .25rem .25rem ;
+    padding: 0.3rem;    
+    color: rgba(0,0,0,.9);
     -ms-overflow-style: none;  /* IE and Edge */
-    scrollbar-width: none;  /* Firefox */
 }
 
 .ac-border {
