--- a/html/css/style.css
+++ b/html/css/style.css
@@ -207,6 +207,11 @@ li > label {
     margin-left: .5em !important;
 }
 
+#ac-select-all:hover, #searchInfoModalButton svg:hover {
+    color: #b59890;
+    cursor: pointer;
+}
+
 #ssDoSearch2, #ssClear, #ssShowMore, #ssShowAll {
     border: 1px solid #615a60;
     border-radius: .25rem;
