--- a/html/css/style.css
+++ b/html/css/style.css
@@ -151,6 +151,30 @@ a.btn-round:hover {
 
 .carousel-indicators {
     cursor: pointer;
+    padding-right: 2em !important;
+}
+
+.main-title {
+    border-radius:.25rem .25rem 0 0;
+    padding:1em;
+    background-color:#b59890!important;
+}
+
+#wrapper-hero-inner p {
+    font-size:18px;
+    line-height:27px;
+    color:#b59890;
+    border-radius: 0 0 .25rem .25rem;;padding:1em;
+    background-color:#615a60!important;
+}
+
+#audenIndexCarousel {
+    padding: 2.5em 2em 5.8em 0 !important;
+    background-color: #000;
+}
+
+.carousel-item img {
+    max-width:100%;
 }
 
 .container-fluid {
