--- a/html/css/style.css
+++ b/html/css/style.css
@@ -160,6 +160,10 @@ a.btn-round:hover {
     background-color:#b59890!important;
 }
 
+#wrapper-hero-inner {
+    max-width: 95% !important;  
+}
+
 #wrapper-hero-inner p {
     font-size:18px;
     line-height:27px;
@@ -169,7 +173,8 @@ a.btn-round:hover {
 }
 
 #audenIndexCarousel {
-    padding: 2.5em 2em 5.8em 0 !important;
+    max-width: 100% !important;
+    padding: 2.5em 3em 5.8em 0 !important;
     background-color: #000;
 }
 
