--- a/html/css/style.css
+++ b/html/css/style.css
@@ -1,5 +1,11 @@
 /* Datatables, provided by https://github.com/babslgam*/
 
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap');
+
+body {
+    font-family: 'Josefin Sans', sans-serif;
+}
+
 div.dataTables_filter {
   text-align:left !important;
 }
@@ -152,34 +158,23 @@ a.btn-round:hover {
 .carousel-indicators {
     cursor: pointer;
     padding-right: 2em !important;
+    margin-bottom: 2.5em !important;
 }
 
 .main-title {
     border-radius:.25rem .25rem 0 0;
-    padding:1em;
-    background-color:#b59890!important;
-}
-
-#wrapper-hero-inner {
-    max-width: 95% !important;  
 }
 
 #wrapper-hero-inner p {
     font-size:18px;
     line-height:27px;
-    color:#b59890;
-    border-radius: 0 0 .25rem .25rem;;padding:1em;
-    background-color:#615a60!important;
+    color:#615a60;
 }
 
 #audenIndexCarousel {
     max-width: 100% !important;
-    padding: 2.5em 3em 5.8em 0 !important;
-    background-color: #000;
-}
-
-.carousel-item img {
-    max-width:100%;
+    padding: 2em 3em 2.05em 0 !important;
+    background-color: #fff;
 }
 
 .container-fluid {
