carousel image resizing to original size #6

--- a/html/css/style.css
+++ b/html/css/style.css
@@ -173,8 +173,13 @@ a.btn-round:hover {
 
 #audenIndexCarousel {
     max-width: 100% !important;
-    padding: 2em 3em 2.05em 0 !important;
+    padding: 2em 3em 2.05em 2em !important;
     background-color: #fff;
+    border-radius: 0 0 .7rem .7rem;
+}
+
+.carousel .carousel-inner .carousel-item {
+    height: 500px !important;
 }
 
 .container-fluid {
