--- a/html/css/style.css
+++ b/html/css/style.css
@@ -445,7 +445,8 @@ fieldset.ssFieldset > span > input {
 /* Medium devices (tablets, 768px and up) */
 @media (min-width: 768px) { 
     .carousel-indicators {
-        margin: 1.5em auto;   
+        margin: 1.5em auto;  
+        padding: .5em 4em;
     }    
     #audenIndexCarousel {
         max-width: 100%;
@@ -454,7 +455,7 @@ fieldset.ssFieldset > span > input {
     }    
     .carousel .carousel-inner .carousel-item {
         max-width: 80%;
-        height: 100%;
+        height: 80%;
         margin: 0 auto;
     }
     #wrapper-hero-inner {
@@ -493,6 +494,7 @@ fieldset.ssFieldset > span > input {
 @media (min-width: 1024px){
     .carousel-indicators {
         margin: 1.5em auto; 
+        padding: 0 3em;
     }    
     #audenIndexCarousel {
         max-width: 100%;
@@ -501,7 +503,6 @@ fieldset.ssFieldset > span > input {
     }    
     .carousel .carousel-inner .carousel-item {
         max-width: 80%;
-        height: 100%;
         margin: 1em auto;
     }
     #wrapper-hero-inner {
@@ -541,6 +542,7 @@ fieldset.ssFieldset > span > input {
 @media (min-width: 1200px) { 
     .carousel-indicators {
         margin: 1.5em auto;
+        padding: 0 3em;
     }    
     #audenIndexCarousel {
         max-width: 100%;
@@ -549,7 +551,6 @@ fieldset.ssFieldset > span > input {
     }    
     .carousel .carousel-inner .carousel-item {
         max-width: 80%;
-        height: 100%;
         margin: 1em auto;
     }
     #wrapper-hero-inner {
@@ -591,7 +592,7 @@ fieldset.ssFieldset > span > input {
     }
     .carousel .carousel-inner .carousel-item {
         max-width: 80%;
-        height: 100%;
+        margin: 1em auto;
     }
     #wrapper-hero-inner {
         margin-bottom: 1em;
