--- a/html/css/style.css
+++ b/html/css/style.css
@@ -395,7 +395,7 @@ fieldset.ssFieldset > span > input {
 /*                                                  */
 /*                                                  */
 /* Small devices (landscape phones, 576px and up) */ 
-@media (min-width: 576px) {
+@media (max-width: 576px) {
     .carousel-indicators {
         margin: 1.5em auto;
         padding: 0 1.5em;         
@@ -406,6 +406,9 @@ fieldset.ssFieldset > span > input {
     }
     .carousel .carousel-inner .carousel-item {
         max-width: 100%;
+        height: 80%;
+        max-height: 80%;
+        margin: .5em auto;
     }
     #wrapper-hero{
         padding-bottom: 2em;
@@ -443,7 +446,7 @@ fieldset.ssFieldset > span > input {
 }
 
 /* Medium devices (tablets, 768px and up) */
-@media (min-width: 768px) { 
+@media (max-width: 768px) { 
     .carousel-indicators {
         margin: 1.5em auto;  
         padding: .5em 4em;
@@ -454,9 +457,10 @@ fieldset.ssFieldset > span > input {
         margin: 0 auto;
     }    
     .carousel .carousel-inner .carousel-item {
-        max-width: 80%;
+        max-width: 100%;
         height: 80%;
-        margin: 0 auto;
+        max-height: 80%;
+        margin: .5em auto;
     }
     #wrapper-hero-inner {
         margin-bottom: 1em;
@@ -491,7 +495,7 @@ fieldset.ssFieldset > span > input {
     }    
 }
 
-@media (min-width: 1024px){
+@media (max-width: 1024px){
     .carousel-indicators {
         margin: 1.5em auto; 
         padding: 0 3em;
@@ -503,6 +507,8 @@ fieldset.ssFieldset > span > input {
     }    
     .carousel .carousel-inner .carousel-item {
         max-width: 80%;
+        height: 80%;
+        max-height: 80%;
         margin: 1em auto;
     }
     #wrapper-hero-inner {
@@ -539,19 +545,21 @@ fieldset.ssFieldset > span > input {
 /*@media (min-width: 992px) {  }*/
 
 /* Extra large devices (large desktops, 1200px and up) */
-@media (min-width: 1200px) { 
+@media (max-width: 1200px) { 
     .carousel-indicators {
         margin: 1.5em auto;
         padding: 0 3em;
     }    
     #audenIndexCarousel {
         max-width: 100%;
-        padding: 0;
-        margin-top: 2em;
+        padding: 2.5em 2em;
     }    
     .carousel .carousel-inner .carousel-item {
         max-width: 80%;
-        margin: 1em auto;
+        padding: 0;
+        height: 80%;
+        max-height: 80%;
+        margin-top: 2em;
     }
     #wrapper-hero-inner {
         margin-bottom: 1em;
@@ -581,10 +589,10 @@ fieldset.ssFieldset > span > input {
 }
 
 /* Extra large devices (large desktops, 1680px and up) */
-@media (min-width: 1680px) { 
+@media (max-width: 1680px) { 
     .carousel-indicators {
         margin: 1.5em 4em;
-        padding: 3em;
+        padding: 2em 3em;
     }       
     #audenIndexCarousel {
         max-width: 100%;
@@ -592,6 +600,8 @@ fieldset.ssFieldset > span > input {
     }
     .carousel .carousel-inner .carousel-item {
         max-width: 80%;
+        height: 80%;
+        max-height: 80%;
         margin: 1em auto;
     }
     #wrapper-hero-inner {
