--- a/html/css/style.css
+++ b/html/css/style.css
@@ -187,6 +187,7 @@ a.btn-round:hover {
 
 .carousel .carousel-inner .carousel-item {
     max-width: 80%;
+    background-color:transparent;
 }
 
 /* staticSearch */
@@ -333,6 +334,18 @@ fieldset.ssFieldset > span > input {
     transform: scale(1.05);
 }
 
+#twitter-logo {
+    width: 10%;
+    height: auto;
+    padding: 12px 0 10px 20px;
+    transition: transform .2s;
+    margin-left: 1em;
+}
+
+#twitter-logo:hover {
+    transform: scale(1.05);
+}
+
 .grid {
     margin-top: 1em;
 }
@@ -397,17 +410,13 @@ fieldset.ssFieldset > span > input {
 /* Small devices (landscape phones, 576px and up) */ 
 @media (max-width: 576px) {
     .carousel-indicators {
-        margin: 1.5em auto;
-        padding: 0 1.5em;         
+        display:none;         
     }
     #audenIndexCarousel {
-        max-width: 100% !important;
+        max-width: 100%;
         padding: 0;
     }
-    .carousel .carousel-inner .carousel-item {
-        max-width: 100%;
-        height: 80%;
-        max-height: 80%;
+    .carousel-item {
         margin: .5em auto;
     }
     #wrapper-hero{
@@ -442,24 +451,23 @@ fieldset.ssFieldset > span > input {
     }
     .navbar-collapse {
         margin: 0;
-    }    
+    }   
+    #twitter-logo {
+        padding: 12px 0 10px 0px;
+    }
 }
 
 /* Medium devices (tablets, 768px and up) */
 @media (max-width: 768px) { 
     .carousel-indicators {
-        margin: 1.5em auto;  
-        padding: .5em 4em;
+        display:none; 
     }    
     #audenIndexCarousel {
         max-width: 100%;
         padding: 2em 2em;
         margin: 0 auto;
     }    
-    .carousel .carousel-inner .carousel-item {
-        max-width: 100%;
-        height: 80%;
-        max-height: 80%;
+    .carousel-item {
         margin: .5em auto;
     }
     #wrapper-hero-inner {
@@ -492,23 +500,22 @@ fieldset.ssFieldset > span > input {
     }
     .navbar-collapse {
         margin: 0;
+    } 
+    #twitter-logo {
+        padding: 12px 0 10px 0px;
     }    
 }
 
 @media (max-width: 1024px){
     .carousel-indicators {
-        margin: 1.5em auto; 
-        padding: 0 3em;
+        display:none; 
     }    
     #audenIndexCarousel {
         max-width: 100%;
         padding: 0;
         margin-top: 2em;
     }    
-    .carousel .carousel-inner .carousel-item {
-        max-width: 80%;
-        height: 80%;
-        max-height: 80%;
+    .carousel-item {
         margin: 1em auto;
     }
     #wrapper-hero-inner {
@@ -530,14 +537,10 @@ fieldset.ssFieldset > span > input {
         padding: 0 3em;
     }    
     #audenIndexCarousel {
-        max-width: 100%;
-        padding: 2.5em 2em;
+        padding: 2.5em 3em;
     }    
-    .carousel .carousel-inner .carousel-item {
-        max-width: 80%;
-        padding: 0;
-        height: 80%;
-        max-height: 80%;
+    .carousel-item {
+        max-width: 100%;
         margin-top: 2em;
     }
     #wrapper-hero-inner {
@@ -556,10 +559,7 @@ fieldset.ssFieldset > span > input {
         max-width: 100%;
         padding: 2.5em 2em;
     }
-    .carousel .carousel-inner .carousel-item {
-        max-width: 80%;
-        height: 80%;
-        max-height: 80%;
+    .carousel-item {
         margin: 1em auto;
     }
     #wrapper-hero-inner {
