--- a/html/css/style.css
+++ b/html/css/style.css
@@ -386,6 +386,28 @@ fieldset.ssFieldset > span > input {
     display:none;
 }
 
+.tab-pane > .tab-content {
+    border: 1px solid #b59890;
+    margin: 0 .5em .5em .5em;
+    border-radius: .5rem;
+}
+
+.pagination {
+    margin: 2em auto 0 auto;
+    text-align:center;
+    display:block;    
+}
+
+.pagination .nav {
+    display: inline-flex !important;
+    border: 1px solid #b59890;
+    padding: .5em .5em 0 .5em;
+    border-radius: .5rem .5rem 0 0;
+    border-bottom: 2px solid #fff;
+    z-index: 99;
+    margin-bottom: -2px;
+}
+
 /* XML raw style */
 .tnc {
     color: brown;
@@ -481,6 +503,9 @@ fieldset.ssFieldset > span > input {
     #twitter-logo {
         padding: 12px 0 10px 0px;
     }
+    .expand-wrapper {
+        display: none;
+    }
 }
 
 /* Medium devices (tablets, 768px and up) */
@@ -529,7 +554,10 @@ fieldset.ssFieldset > span > input {
     } 
     #twitter-logo {
         padding: 12px 0 10px 0px;
-    }    
+    }
+    .expand-wrapper {
+        display: none;
+    }
 }
 
 @media (max-width: 1024px){
