editions pagination with more than 9 elements added dropdown

--- a/html/css/style.css
+++ b/html/css/style.css
@@ -398,6 +398,10 @@ fieldset.ssFieldset > span > input {
     display:block;    
 }
 
+.pagination .nav .nav-item .nav-link {
+
+}
+
 .pagination .nav {
     display: inline-flex !important;
     border: 1px solid #b59890;
